# Aevox

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml  vcpkg.json
.claude/: settings.local.json
.claude/agents/: architect.md  developer.md  tpo.md
.claude/skills/architect/: SKILL.md
.claude/skills/developer/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/investigate/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/tpo/: SKILL.md
.github/workflows/: ci.yml  docs.yml
docs/: changelog.md  getting-started.md  index.md
docs/api/: async.md  config.md  executor.md  index.md  request-response.md  router.md  task.md  tcp_stream.md
docs/architecture/: coroutines.md  error-model.md  executor.md  index.md  layer-diagram.md  router.md
docs/examples/: hello-world.md  index.md
docs/guide/: async-patterns.md  configuration.md  error-handling.md  first-http-server.md  index.md  installation.md  request-response.md  routing.md
examples/: CMakeLists.txt  README.md
examples/configured-server/: CMakeLists.txt  aevox.toml  main.cpp
examples/hello-world/: CMakeLists.txt  README.md  main.cpp
include/aevox/: app.hpp  async.hpp  concepts.hpp  config.hpp  executor.hpp  request.hpp  response.hpp  router.hpp  router_impl.hpp  task.hpp  tcp_stream.hpp
scripts/: format.sh
src/: CMakeLists.txt  aevox_placeholder.cpp
src/config/: config_impl.cpp  toml_loader.cpp  toml_loader.hpp
src/http/: CMakeLists.txt  http_parser.cpp  http_parser.hpp  request_impl.cpp  request_impl.hpp  response_impl.cpp  response_impl.hpp
src/net/: asio_executor.cpp  asio_executor.hpp  asio_tcp_stream.cpp  asio_tcp_stream.hpp  executor_context.cpp
src/router/: CMakeLists.txt  app_impl.cpp  handler_wrap.hpp  router_impl.cpp  router_impl.hpp
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt
tests/bench/net/: AEV-001-accept-throughput.cpp  AEV-006-executor-throughput.cpp  CMakeLists.txt  accept-throughput.cpp  executor-throughput.cpp
tests/integration/: CMakeLists.txt
tests/integration/config/: CMakeLists.txt  config-file-roundtrip.cpp
tests/integration/http/: AEV-003-http-parse-roundtrip.cpp  CMakeLists.txt  http-parse-roundtrip.cpp
tests/integration/net/: AEV-001-tcp-accept.cpp  AEV-006-thread-pool-integration.cpp  CMakeLists.txt  tcp-accept.cpp  thread-pool-integration.cpp
tests/integration/router/: AEV-004-router-e2e.cpp  CMakeLists.txt  router-e2e.cpp
tests/smoke/: AEV-002-compile-smoke.cpp  CMakeLists.txt  build-smoke.cpp
tests/unit/: CMakeLists.txt
tests/unit/config/: CMakeLists.txt  config-defaults.cpp
tests/unit/http/: AEV-003-parser.cpp  AEV-005-request-response.cpp  CMakeLists.txt  http-parser.cpp  request-response.cpp
tests/unit/net/: AEV-001-executor-contract.cpp  AEV-006-executor.cpp  CMakeLists.txt  executor-async.cpp  executor-contract.cpp
tests/unit/router/: AEV-004-router.cpp  CMakeLists.txt  router.cpp
