# examples/CMakeLists.txt
#
# Example applications demonstrating the Aevox public API.
# Built as part of the default build — ensures examples always compile against the current API.
# Location convention: examples/{example-name}/main.cpp

add_subdirectory(hello-world)
add_subdirectory(configured-server)
